gcc/testsuite/rust/rustc/ui/block-result/block-must-not-have-result-res.rs
struct R;

impl Drop for R {
    fn drop(&mut self) {
        true // { dg-error ".E0308." "" { target *-*-* } }
    }
}

fn main() {
}

